base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msb-frontend
  labels:
    app: msb-frontend
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: msb-frontend
  template:
    metadata:
      labels:
        app: msb-frontend
    spec:
      containers:
        - name: msb-frontend
          image: nginxinc/nginx-unprivileged:1.25
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
