base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msb-frontend
  labels:
    app: msb-frontend
spec:
  selector:
    app: msb-frontend
  ports:
    - port: 8080
      targetPort: 8080
