base/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: msb-frontend
spec:
  to:
    kind: Service
    name: msb-frontend
  port:
    targetPort: 8080
